# GM4_Datapacks

./: .gitignore  .gitmodules  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  README.md  beet-dev.py  beet-dev.yaml  beet-release.yaml  beet-test.yaml  beet.json  beet.yaml  commands.json  contributers.json  contributors.json  convert.py  gm4.py  library.yaml  meta.json  module.yaml  modules.json  pulse_check.mcfunction  pyproject.toml  requirements.txt  skin_downloader.py  spyglass.json  temp.json  yeet.md
.github/: FUNDING.yml
1.13/: meta.json
1.14/: meta.json
1.15/: meta.json
1.16/: meta.json
1.17/: meta.json
1.18/: meta.json
1.19/: meta.json
1.19.4/: meta.json
1.20/: meta.json
1.20.5/: meta.json
1.21/: meta.json
1.21.5/: meta.json
26.1/: meta.json
26.2/: meta.json
base/: beet.yaml  mod.mcdoc  pack.mcmeta
capture_spawner/: spawner_list.mcfunction
docs/: code-conventions.md  design-ethos.md  getting-started.md  making-a-module.md  releasing-a-module.md  resource-pack-management.md  utilities.md
fireflies/: pack.mcmeta
gm4/: commands.py  contributors.json  modeldata_registry.json  skin_cache.json  util.py  utils.py
gm4_afk_detector/: pack.mcmeta
gm4_allay_revitalizing/: pack.mcmeta
gm4_ambrosia/: _pack.mcmeta  pack.mcmeta
gm4_animi_shamir/: README.md  beet.yaml  mod.mcdoc  pack.mcmeta  translations.csv
gm4_apple_trees/: README.md  beet.yaml  pack.mcmeta
gm4_area_markers/: pack.mcmeta
gm4_armor_expanded/: README.md  beet.yaml  translations.csv
gm4_armor_identification/: pack.mcmeta
gm4_audere_shamir/: README.md  beet.yaml  mod.mcdoc  pack.mcmeta  translations.csv
gm4_augmented_armor/: README.md  beet.yaml
gm4_auto_crafting/: README.md  beet.yaml  generate.py  pack.mcmeta
gm4_balloon_animals/: README.md  animals.csv  beet.yaml  generate.py  generate_loot_tables.py  mod.mcdoc  names.csv  translations.csv
gm4_bat_grenades/: README.md  antest.py  beet.yaml  pack.mcmeta
gm4_beacon_cores/: pack.mcmeta
gm4_beehive_inspector/: README.md  beet.yaml  pack.mcmeta
gm4_better_armor_stands/: pack.mcmeta
gm4_better_armour_stands/: README.md  _pack.mcmeta  beet.yaml  mod.mcdoc  pack.mcmeta  translations.csv
gm4_better_crossbows/: pack.mcmeta
gm4_chairs/: README.md  (+3 more)
(+29746 files in other folders)
