[project]
name = "gm4"
version = "1.0.0"
description = "Data packs for https://gm4.co"
authors = [
    {name = "Gamemode 4 Contributors"},
]
requires-python = ">= 3.10, < 4.0"
dependencies = [
    "beet >= 0.110.1",
    "mecha >= 0.98.1",
    "bolt >= 0.49.1",
    "PyYAML >= 6.0, < 7.0",
    "pydantic >= 2.6.1, < 3.0.0",
    "requests >= 2.28.1, < 3.0.0",
    "pillow >= 10.0.0, < 11.0.0",
    "repro-zipfile >= 0.1.0, < 1.0.0",
]

[tool.uv]
dev-dependencies = [
    "black >= 22.6.0, < 23.0.0",
    "isort >= 5.10.1, < 6.0.0",
    "uv >= 0.5.4",
]

[project.entry-points.beet]
commands = "gm4.commands"
autoload = "gm4.plugins.autoload"

[tool.beet]

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["gm4"]
