[project]
name = "gm4"
version = "1.0.0"
description = "Data packs for https://gm4.co"
authors = [
    {name = "Gamemode 4 Contributors"},
]
requires-python = ">=3.14"
dependencies = [
    "beet>=0.113.0",
    "mecha>=0.102.0",
    "bolt>=0.50.0",
    "requests>=2.28.1",
    "repro-zipfile>=0.1.0",
]

[dependency-groups]
dev = [
    "black>=22.6.0",
    "isort>=5.10.1",
]

[project.entry-points.beet]
commands = "gm4.commands"
autoload = "gm4.plugins.autoload"

[tool.beet]

[tool.pyright]
typeCheckingMode = "strict"

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools"]

[tool.setuptools]
packages = ["gm4"]
